fix modal window visibility

--- a/css/main.css
+++ b/css/main.css
@@ -555,12 +555,13 @@ a {
     height: 100%;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 10;
     padding-top: 10%;
     padding-right: 10%;
     padding-left: 10%;
-    display: none;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .modal-window img {
@@ -619,5 +620,6 @@ a {
     visibility: visible;
 }
 
-
-
+.overflow-hidden {
+    overflow: hidden;
+}
